# archivesnap

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
archivesnap/: __init__.py  __main__.py  cli.py  differ.py  fetcher.py  hashing.py  normalize.py  report.py  store.py  watcher.py
demos/01-vendor-security-advisory/: SCENARIO.md  after.html  before.html  watch.config.json
demos/02-tos-policy-change/: SCENARIO.md  after.html  before.html  watch.config.json
demos/03-cloud-status-page/: SCENARIO.md  after.html  before.html  watch.config.json
demos/04-kev-catalog-entry/: SCENARIO.md  after.html  before.html  watch.config.json
demos/05-firmware-release-notes/: SCENARIO.md  after.html  before.html  watch.config.json
demos/06-signing-key-rotation/: SCENARIO.md  after.html  before.html  watch.config.json
demos/07-privacy-policy-subprocessors/: SCENARIO.md  after.html  before.html  watch.config.json
demos/08-product-eol-notice/: SCENARIO.md  after.html  before.html  watch.config.json
demos/09-incident-postmortem/: SCENARIO.md  after.html  before.html  watch.config.json
demos/10-package-registry-listing/: SCENARIO.md  after.html  before.html  watch.config.json
examples/: help.txt  policy_v1.html  policy_v2.html  version.txt  watch.config.json
tests/: test_cli.py  test_demos.py  test_differ.py  test_normalize.py  test_report.py  test_store.py  test_store_ordering.py  test_watch.py
