[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-archivesnap"
version = "0.1.0"
description = "Web-page snapshot and change monitor for defensive page-watching."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "COCL 1.0" }
authors = [{ name = "Cognis Digital" }]
maintainers = [{ name = "Cognis Digital" }]
keywords = ["monitoring", "snapshot", "diff", "web", "change-detection", "osint"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
archivesnap = "archivesnap.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/archivesnap"

[tool.setuptools]
packages = ["archivesnap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
